--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "server-beereign",
   "version": "0.0.1",
+  "module": "true",
   "description": "The backend (API, database, etc.). of BeeReign",
   "main": "src/index.js",
   "scripts": {
@@ -19,12 +20,11 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
+    "express": "^4.18.0",
     "joi": "^17.6.0",
-    "npm": "^8.5.5",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.19.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
