--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server-beereign",
   "version": "0.0.1",
-  "module": "true",
   "description": "The backend (API, database, etc.). of BeeReign",
   "main": "src/index.js",
   "scripts": {
@@ -22,6 +21,11 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0"
