--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,13 @@
 NODE_ENV=
-CORS_URL=
+CORS_URL=["https://example.com", "https://dashboard.example.com"]
 PORT=
 DB_HOST=
 DB_PORT=
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_USER_PASSWORD=
 JWT_SECRET=
