--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-beereign",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "The backend (API, database, etc.). of BeeReign",
   "main": "src/index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
+    "nodemailer": "^6.7.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
