--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
 NODE_ENV=
+LOCALE=
 CORS_URL=["https://example.com", "https://dashboard.example.com"]
+FRONT_END_URL=
 PORT=
 DB_HOST=
 DB_PORT=
@@ -11,3 +13,4 @@ MAIL_PORT=
 MAIL_USER=
 MAIL_USER_PASSWORD=
 JWT_SECRET=
+RECOVERY_SECRET=
