--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:14
+    image: postgres:latest
     env_file: .env
     environment:
       - POSTGRES_DB=${DB_NAME}
